// Enums
Enum user_roles {
  super_admin
  admin
  teacher
  student
}

Enum genders {
  male
  female
}

Enum educational_stages {
  no_school
  primary_school
  preparatory_school
  secondary_school
  university_stage
  graduate
}

Enum student_statuses {
  commited
  absent
  uncommited
}

Enum grades {
  excellent
  good_plus
  good
  bad
}

Enum tajweed_learning_statuses {
  not_yet
  in_progress
  completed
}

Enum attendance_statuses {
  attended
  absent
  execused
}

Enum memorization_amounts {
  less_than_5_pages
  from_5_to_10_pages
  from_10_to_15_pages
  one_juz
  more_than_one_juz
}

Enum period_types {
  weekly
  monthly
  yearly
}

// Tables
Table users {
  id bigint [primary key]
  name string [not null]
  username string [unique, not null]
  email string [unique, not null]
  phone string [default: null]
  role user_roles [default: 'student', not null]
  password text [not null]
  gender genders [default: 'male', not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table students {
  user_id bigint [ref: > users.id, primary key]
  educational_stage educational_stages [not null]
  code string [unique, not null]
  begin_memorizing_at date [default: null]
  memorizing_completed_at date [default: null]
  created_by bigint [ref: > users.id, default: null]
  is_active boolean [default: true, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table student_tajweed {
  student_id bigint [ref: > students.user_id, primary key]
  recitation_level grades [default: null]
  tajweed_learning_status tajweed_learning_statuses [default: 'not_yet', not null]
  notes text [default: null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table teachers {
  user_id bigint [ref: > users.id, primary key]
  specialization string [default: null]
  created_by bigint [ref: > users.id, default: null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table groups {
  id bigint [primary key]
  name string [not null]
  teacher_id bigint [ref: > teachers.user_id, not null]
  schedule jsonb [default: '[]']
  is_active boolean [default: true, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table group_student {
  id bigint [primary key]
  group_id bigint [ref: > groups.id, not null]
  student_id bigint [ref: > students.user_id, not null]
  student_status student_statuses [default: 'commited', not null]
  is_online boolean [default: false, not null]
  memorizing_amount memorization_amounts [default: null]
  joined_at datetime [not null]
  left_at datetime [default: null] // TODO
  
  indexes {
    (group_id, student_id) [unique]
  }
}

Table reports {
  id bigint [primary key]
  student_id bigint [ref: > students.user_id, not null]
  group_id bigint [ref: > groups.id, not null]
  recorded_by bigint [ref: > users.id, not null]
  date date [not null]
  attendance_status attendance_statuses [not null]
  memorized_amount text [default: null]
  grade grades [default: null]
  notes text [default: null]
  created_at timestamp [default: `now()`]
  
  indexes {
    (student_id, group_id, date) [unique]
  }
}

// TABLE - Historical period snapshots
// Table group_period_stats {
//   id bigint [primary key]
//   group_id bigint [ref: > groups.id, not null]
//   period_type period_types [not null]
//   period_start date [not null]
//   period_end date [not null]
  
//   students_count integer [not null]
//   commited_count integer [default: 0]
//   uncommited_count integer [default: 0]
//   absent_count integer [default: 0]
//   stopped_count integer [default: 0]
  
//   total_sessions integer [default: 0]
//   attendance_rate decimal [default: null]
//   avg_grade decimal [default: null]
  
//   notes text [default: null]
//   generated_at timestamp [default: `now()`]
  
//   indexes {
//     (group_id, period_type, period_start) [unique]
//   }
// }

// Views
Table statistics {
  groups_count integer
  students_count integer
  teachers_count integer
  active_students_count integer
  inactive_students_count integer
}

Table group_stats {
  group_id bigint [ref: > groups.id]
  students_count integer
  commited_count integer
  uncommited_count integer
  absent_count integer
  inactive_count integer
}